kubernetes/monitoring/cluster_monitor/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cluster-monitor
  namespace: cluster-monitor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cluster-monitor
  template:
    metadata:
      labels:
        app: cluster-monitor
    spec:
      serviceAccountName: cluster-monitor-sa
      containers:
        - name: monitor
          image: ghcr.io/mauricevanlavieren-lab/live-kubernetes-cluster-monitor:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000 # Pas aan op de poort die jouw app gebruikt
          resources:
            limits:
              cpu: "200m"
              memory: "256Mi"
            requests:
              cpu: "50m"
              memory: "128Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: cluster-monitor-service
  namespace: cluster-monitor
spec:
  selector:
    app: cluster-monitor
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000 # Koppel poort 80 van de service aan poort van de container
  type: ClusterIP
