kubernetes/monitoring/cluster_monitor/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cluster-monitor-ingress
  namespace: cluster-monitor
spec:
  ingressClassName: traefik
  rules:
    - host: monitor.home.arpa
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cluster-monitor-service
                port:
                  number: 80
